--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-cli-npm",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "react-cli",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "init": "bin/cli.js"
+    "handsome-react": "bin/cli.js"
   },
   "keywords": [
     "react-cli"
@@ -19,14 +19,15 @@
   "author": "helloworld3q3q",
   "license": "ISC",
   "dependencies": {
-    "child_process": "^1.0.2"
-  },
-  "devDependencies": {
     "chalk": "^2.4.2",
+    "child_process": "^1.0.2",
     "cli-table": "^0.3.1",
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "commander": "^2.19.0",
+    "fs": "0.0.1-security",
+    "iconv-lite": "^0.4.24",
+    "inquirer": "^6.2.2",
     "ora": "^3.2.0"
   }
 }
